--- a/ionic-angular-template/package.json
+++ b/ionic-angular-template/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.0",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -31,6 +32,7 @@
     "core-js": "^2.5.4",
     "ethers": "^4.0.46",
     "firebase": "^7.12.0",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
